--- a/style.css
+++ b/style.css
@@ -320,20 +320,22 @@ tr:nth-child(even) {
 
 /* GAEL-SRC.GITHUB.IO */
 .gael-src-link {
-  color: #0081ff;
-  border: solid 1px #0081ff;
+  color: black;
+  border: solid 1px black;
   text-decoration: none;
-  font-size: 16px;
-  height: 20px;
-  margin: 10px 10px 10px 30px;
+  text-align: center;
+  font-size: 18px;
   padding: 5px 10px;
 }
-
 .gael-src-link:hover {
-  color: #0081ff;
-  text-decoration: underline;
+  color: white;
+  background-color: black;
 }
-
 .gael-src-link-wrapper {
-  padding: 20px;
+  min-height: 500px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
